Volunteer | Update needed positions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -131,7 +131,7 @@ const postColumns = (index) => {
         <br/>
         <p>
           And, as always, our very own Charlie Daniels has his immersive videos on YouTube for your viewing pleasure: 
-          <a class="block" href="https://www.youtube.com/c/MalixePhoto">https://www.youtube.com/c/MalixePhoto</a>
+          <a class="block" href="https://www.youtube.com/playlist?list=PLL7ppauF4ZjoMkECEbEGaEUJqnUm36ovn">https://www.youtube.com/playlist?list=PLL7ppauF4ZjoMkECEbEGaEUJqnUm36ovn</a>
         </p>
       </div>
     </article>
