Index | Edit H2021 post festival message

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,11 +112,11 @@ const postColumns = (index) => {
       </div>
       <div>
         <p>
-          We had an amazing HONK! Fest West 2021, despite COVID restrictions, thanks to all of our volunteers, performers, and everyone who came out to brave the beautiful fall weather! The rain nor the pandemic could not keep the HONK! from the people. We were blown away by how amazing the bands were and how positive the entire day was. Thanks again to all of you for making it a huge success. 
+          We had an amazing HONK! Fest West 2021. Thank you to all of our volunteers, performers, and everyone who came out to brave the beautiful fall weather! The pandemic nor the rain could keep HONK! from shaking our horns, drums and butts at it. We were blown away by the amazing energy of this year's bands and the pandemic of positivity everyone shared throughout the day.  Much love and thanks to all of you for joining us for a joyous cacophony in Columbia Park, Seattle!
         </p>
         <br/>
         <p>
-          Mark your calendars for the first weekend of June, when we return for HONK! Fest West 2022! Locations to be announced in January!!! We are looking forward to HONKing again with you in 2022! 
+          Mark your calendars for the first weekend of June, when we return for HONK! Fest West 2022! Locations to be announced in January!!! We are looking forward to HONK'ing again with you in 2022! 
         </p>
         <br/>
         <p>
