Index | Update newsletter signup destination

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ const postColumns = (index) => {
           NEWSLETTER
         </span>
         <form 
-          action="https://honkfestwest.us4.list-manage.com/subscribe/post?u=ef3f62323075a304e4a1428e3&amp;id=b6e69bd855" 
+          action="https://honkfestwest.us4.list-manage.com/subscribe?u=ef3f62323075a304e4a1428e3&id=b6e69bd855" 
           method="post" 
           id="mc-embedded-subscribe-form" 
           name="mc-embedded-subscribe-form" 
