--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -25,8 +25,8 @@ import sponsors from '@data/sponsors.json'
 		</p>
 	</article>
 
-	<div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
-		<div class="w-full md:w-2/3 flex flex-col gap-4 sm:gap-6">
+	<div class="flex flex-wrap lg:flex-nowrap gap-4 sm:gap-6">
+		<div class="w-full lg:w-1/3 flex flex-col gap-4 sm:gap-6">
 
 			<!-- READY TO PARTICIPATE? -->
 			<article class="content-container">
@@ -45,6 +45,8 @@ import sponsors from '@data/sponsors.json'
 					</Markdown>
 				</p>
 			</article>
+		</div>
+		<div class="w-full lg:w-2/3 flex flex-col gap-4 sm:gap-6">
 
 			<article class="content-container">
 				<Title title="Arts Support Organizations"/>
@@ -84,86 +86,6 @@ import sponsors from '@data/sponsors.json'
 					</Markdown>
 				</p>
 			</article>
-		</div>
-
-		<!-- SPONSORSHIP LEVELS -->
-		<div class="w-full md:w-1/3">
-			<div class="content-container">
-				<Title title="Sponsorship Levels" center={true} />
-
-				<!-- GRAND MARSHALL -->
-				<h3 class="sponsor-level-title mt-4">
-					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=5000">GRAND MARSHALL</a>
-					<span class="text-main-color-50"> $5,000+</span>
-				</h3>
-				<div class="content mb-5">
-					<Markdown>
-						* Top billing as a “Title Sponsor” of our event
-						* Large color logo on sponsors web page, promotional material, email newsletters
-						* Color business card ad in festival program
-						* Booth placement available Friday & Saturday (10×10 or smaller)
-						*	Large banners at appropriate venues
-						* Social media & website blog coverage year-round
-						* Verbal recognition throughout festival
-						* 10 tickets to special events and afterparties for 1 year
-						* Live 1 hour performance (subject to band availability) from participating band
-					</Markdown>
-				</div>
-
-				<!-- TOP BRASS -->
-				<h3 class="sponsor-level-title">
-					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=2500">TOP BRASS</a>
-					<span class="text-main-color-50"> $2,500</span>
-				</h3>
-				<div class="content mb-5">
-					<Markdown>				
-						* Featured billing as an sponsor of our event
-						* Color logo on sponsors web page, promotional material, email newsletters
-						* Small ad in festival program
-						* Signage at appropriate venues
-						* Booth placement available Friday and Saturday (10×10 or smaller)
-						* Social media & website blog coverage throughout festival
-						* Verbal recognition throughout festival
-						* Invites to select special events and afterparties
-					</Markdown>
-				</div>
-
-				<!-- HORN STAR -->
-				<h3 class="sponsor-level-title">
-					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=1000">HORN STAR</a>
-					<span class="text-main-color-50"> $1,000</span>
-				</h3>
-				<div class="content mb-5">
-					<Markdown>				
-						* Color logo on sponsors web page
-						* Shared booth placement available
-						* Social media shoutouts and recognition
-						* Invited to select special events
-					</Markdown>
-				</div>
-
-				<!-- BAND BOOSTER -->
-				<h3 class="sponsor-level-title">
-					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=500">BAND BOOSTER</a>
-					<span class="text-main-color-50"> $500</span>
-				</h3>
-				<div class="content mb-5">
-					<Markdown>				
-						* Logo on sponsors web page
-						* Sponsor listing where appropriate
-					</Markdown>
-				</div>
-
-				<!-- IN-KIND CONTRIBUTION -->
-				<h3 class="sponsor-level-title">
-					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest">IN-KIND CONTRIBUTION</a>
-				</h3>
-				<div class="content">
-					<Markdown>				
-						* Promotions determined on a case-by-case basis
-					</Markdown>
-				</div>
-			</div>
 		</div>
 	</div>
 </BaseLayout>
