Update Astro and Tailwindcss libraries

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
-import SocialLinks from '$components/SocialLinks'
-import Image from '$components/Image'
+import SocialLinks from '@components/SocialLinks.astro'
+import Image from '@components/Image.astro'
 import GoldenDino from './GoldenDino.svelte'
 
 import sponsors from '@data/sponsors.json'
