--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
-import SocialLinks from '$components/SocialLinks.astro'
-import Image from '$components/Image.astro'
+import SocialLinks from '@components/SocialLinks.astro'
+import Image from '@components/Image.astro'
 import navigation from '@data/navigation.json'
 
 const activeLink = (link) => {
