--- a/src/components/LinkBlurb.astro
+++ b/src/components/LinkBlurb.astro
@@ -1,6 +1,6 @@
 ---
 import { Markdown } from 'astro/components'
-import Title from '$components/Title'
+import Title from '@components/Title.astro'
 
 const {title="", href="#"} = Astro.props
 ---
