--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from './BaseLayout.astro'
-import PostBlurb from '$components/post-blurb/PostBlurb.astro'
+import PostBlurb from '@components/post-blurb/PostBlurb.astro'
 
 const { content } = Astro.props;
 ---
