--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro'
-import Title from '$components/Title'
-import Image from '$components/Image'
+import Title from '@components/Title.astro'
+import Image from '@components/Image.astro'
 
 import family from '@data/honk-family.json'
 ---
