--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro'
-import Image from '$components/Image.astro'
+import Image from '@components/Image.astro'
 
 import emails from '@data/email-addresses.json' 
 import committee from '@data/committee.json'
