--- a/src/pages/festival/index.astro
+++ b/src/pages/festival/index.astro
@@ -1,7 +1,7 @@
 ---
 	import { Markdown } from 'astro/components'
 	import FestivalLayout from '@layouts/FestivalLayout.astro'
-	import Title from '$components/Title.astro'
+	import Title from '@components/Title.astro'
 	import schedule from '@data/schedule.json'
 	import bands from '@data/bands.json'
 
