--- a/src/pages/festival/map.astro
+++ b/src/pages/festival/map.astro
@@ -1,7 +1,7 @@
 ---
-	import Image from '$components/Image.astro'
+	import Image from '@components/Image.astro'
 	import FestivalLayout from '@layouts/FestivalLayout.astro'
-	import Title from '$components/Title.astro'
+	import Title from '@components/Title.astro'
 
 	const locations = [
 			'Rainier Arts Center (Green Room)',
