--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -1,9 +1,7 @@
 ---
 import {Markdown} from 'astro/components'
-import YAML from 'yaml'
 import BaseLayout from '@layouts/BaseLayout.astro'
-import Title from '$components/Title.astro'
-import Image from '$components/Image.astro'
+import Title from '@components/Title.astro'
 
 import volunteer_data from '@data/volunteer.json'
 
