--- a/src/components/base-head/BaseHead.astro
+++ b/src/components/base-head/BaseHead.astro
@@ -18,7 +18,7 @@ const { title = '' } = Astro.props;
 <NetlifyIdentity />
 
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-<link rel="stylesheet" type="text/css" href="/style/global.css">
+<link rel="stylesheet" type="text/css" href={Astro.resolve("../../styles/global.css")}>
 
 <title>{ title }</title>
 
