--- a/src/components/post-blurb/PostBlurb.astro
+++ b/src/components/post-blurb/PostBlurb.astro
@@ -1,7 +1,7 @@
 ---
 import { Markdown } from 'astro/components'
-import Title from '$components/Title.astro'
-import Image from '$components/Image.astro'
+import Title from '@components/Title.astro'
+import Image from '@components/Image.astro'
 import OneColTemplate from './OneColTemplate.astro'
 import TwoColTemplate from './TwoColTemplate.astro'
 import ThreeColTemplate from './ThreeColTemplate.astro'
