--- a/src/components/post-blurb/ThreeColTemplate.astro
+++ b/src/components/post-blurb/ThreeColTemplate.astro
@@ -1,7 +1,7 @@
 ---
 import { Markdown } from 'astro/components'
-import Title from '$components/Title.astro'
-import Image from '$components/Image.astro'
+import Title from '@components/Title.astro'
+import Image from '@components/Image.astro'
 import DateTime from './DateTime.astro'
 
 const {post} = Astro.props;
