--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
-import Head from '$components/base-head/BaseHead.astro'
-import Header from '$components/Header.astro'
-import Footer from '$components/Footer.astro'
+import Head from '@components/base-head/BaseHead.astro'
+import Header from '@components/Header.astro'
+import Footer from '@components/Footer.astro'
 
 const { title } = Astro.props;
 ---
