--- a/src/pages/donate/thankyou.astro
+++ b/src/pages/donate/thankyou.astro
@@ -1,8 +1,8 @@
 ---
 import {Markdown} from 'astro/components'
 import BaseLayout from '@layouts/BaseLayout.astro'
-import Title from '$components/Title'
-import Image from '$components/Image'
+import Title from '@components/Title.astro'
+import Image from '@components/Image.astro'
 
 import sponsors from '@data/sponsors.json'
 ---
