--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,24 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro'
-import PostBlurb from '$components/post-blurb/PostBlurb.astro'
-import LinkBlurb from '$components/LinkBlurb.astro'
-import Image from '$components/Image.astro'
-import Title from '$components/Title.astro'
+import PostBlurb from '@components/post-blurb/PostBlurb.astro'
+import LinkBlurb from '@components/LinkBlurb.astro'
+import Image from '@components/Image.astro'
+import Title from '@components/Title.astro'
 import Slideshow from '../components/slideshow/Slideshow.jsx'
 import slides from '@data/slideshow.json'
 
 import volunteer_data from '@data/volunteer.json'
 
-const posts = Astro.fetchContent('@pages/posts/*.md')
-  .filter((post) => !!post.order)
-  .sort((a,b) => (a.order - b.order));
+let posts = [];
+
+try {
+  posts = Astro.fetchContent('/src/pages/posts/*.md')
+    .filter((post) => !!post.order)
+    .sort((a,b) => (a.order - b.order));
+} catch (error) {
+  console.error("No posts available in the posts folder");
+}
+
 const posts_length = posts.length;
 const postColumns = (index) => {
   if (posts_length % 3 === 1 && index > posts_length - 2) {
