--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -40,7 +40,7 @@ import family from '@data/honk-family.json'
 					/>
 				</div>
 				<p class="content">
-					HONK! Fest West is a free, three-day, community-supported music festival devoted to marching bands, drum corps, samba lines, and anything acoustic and mobile that makes a ruckus. This immersive festival occurs annually in June, and is 100% volunteer-run, performed, and organized. HONK! is part of a global renaissance of street band culture, with Seattle’s festival occurring since 2008. 
+					HONK! Fest West is an independent 501(c)(3) arts organization that produces a free, three-day, community-supported music festival devoted to marching bands, drum corps, samba lines, and anything acoustic and mobile that makes a ruckus. This immersive festival occurs annually in June, and is 100% volunteer-run, performed, and organized. HONK! is part of a global renaissance of street band culture, with Seattle’s festival occurring since 2008. 
 
 				<br/><br/>
 
