--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -44,9 +44,16 @@ import sponsors from '@data/sponsors.json'
 				<div class="content">
 					<Markdown>
 						Your contributions help make this event possible. Through the generous efforts of our shared community, we’ll keep bringing music to the streets and parks of Seattle’s neighborhoods.
+						<br/><br/>
+						HONK! Festival West is a 501(c)(3) nonprofit organization. Tax ID #86-3761255. Donations to HONK! Fest West are tax-deductible to the extent allowed by law. Donations can be made via check to:
 						<br/>
-						HONK! Fest West is fiscally sponsored by [Shunpike](https://poweredbyshunpike.org/c/PBS/a/honkfestwest) which is a 501(c)(3) non-profit organization. Donations made through Shunpike are tax deductible to the fullest extent of the law.
-						<br/>
+						<span class="flex flex-col block my-4 sm:my-5 font-bold">
+							HONK! Festival West
+							<br/>
+							PO Box 20242
+							<br/>
+							Seattle, WA 98102
+						</span>
 						Please get in touch with us at [info@honkfestwest.org](mailto:info@honkfestwest.org) if you’d like another option, or would like to arrange donations of goods or services. Thanks so much, and we hope to see you at HONK! Fest West.
 					</Markdown>
 				</div>
