--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -33,15 +33,20 @@ import sponsors from '@data/sponsors.json'
 				<Title title="Ready to Participate?"/>
 				<p class="content">
 					<Markdown>
-						HONK! Fest West is fiscally sponsored by Shunpike, a 501(c)(3) non-profit organization that supports the arts, as our fiscal sponsor. Donations can be made via check to:
-						<span class="flex flex-col items-center text-center block my-4 sm:my-5">
-							**Shunpike**
-
-							**(HONK! Fest West in the memo line)**
-
-							**PO BOX 22439, Seattle, WA 98122**
+						HONK! Festival West is a 501(c)(3) nonprofit organization. 
+						<br/><br/>
+						Tax ID #86-3761255. 
+						<br/><br/>
+						Donations to HONK! Festival West are tax-deductible to the extent allowed by law. 
+						<br/><br/>
+						Donations can be made via check to:
+						<span class="flex flex-col block my-4 sm:my-5 font-bold">
+							HONK! Festival West
+							<br/>
+							PO Box 20242
+							<br/>
+							Seattle, WA 98102
 						</span>
-						or securely online at: http://poweredbyshunpike.org
 					</Markdown>
 				</p>
 			</article>
@@ -51,19 +56,6 @@ import sponsors from '@data/sponsors.json'
 			<article class="content-container">
 				<Title title="Arts Support Organizations"/>
 				<p class="content">
-					<Markdown>
-						We thank [Shunpike](http://shunpike.org/), a 501(c)(3) non-profit agency that provides independent arts groups in Washington State with the services, resources, and opportunities they need to forge their own paths to sustainable success.
-					</Markdown>
-					<a class="block" href={sponsors.shunpike.link} >
-						<Image 
-							className="w-auto h-14 mx-auto my-5" 
-							src={sponsors.shunpike.image} alt={sponsors.shunpike.name}
-							width="180"
-							height="34"
-							raw={true}
-						/>
-					</a>
-					<span class="border-b-4 border-opacity-30 border-accent-color border-dotted w-full block mb-4"/>
 					<Markdown>
 						HONK! Fest West is supported, in part, by grants from the Community Investments Fund of [Tides Foundation](http://www.tides.org/), [4Culture](http://www.4culture.org/), 
 						 [Arts Fund](https://www.artsfund.org/), the [Washington State Arts Commission](https://www.arts.wa.gov/), and the [National Endowment for the Arts](https://www.arts.gov/).
