--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,6 @@ import Slideshow from '../components/slideshow/Slideshow.jsx'
 import slides from '@data/slideshow.json'
 import volunteer_data from '@data/volunteer.json'
 
-import volunteer_data from '@data/volunteer.json'
-
 let posts = [];
 
 try {
@@ -36,25 +34,24 @@ const postColumns = (index) => {
   <div class="grid grid-cols-1 sm:grid-cols-6 gap-4 sm:gap-6 w-full">
 
     <!-- INFO BLOCK -->
-    <section itemscope itemtype="https://schema.org/Event" class="sm:col-span-3 content-container" >
+    <section itemscope itemtype="https://schema.org/Event" class="w-full col-span-6 sm:col-span-3 content-container" >
       <div class="flex flex-col justify-between items-center h-full text-2xl sm:text-3xl  font-medium tracking-wide">
         <span class="block text-title-primary-color text-center mb-2 hidden md:block font-emphasis" itemprop="name">
           <span class="text-gray-300">HONK!</span> FEST WEST
         </span>
         <div class="flex flex-col lg:flex-row justify-center items-center md:mb-2 w-full">
-          <span class="hidden sm:block mb-2 lg:mb-0 text-gray-300 tracking-normal md:mr-2 font-emphasis text-center">
+          <span class="block mb-2 lg:mb-0 text-gray-300 tracking-normal md:mr-2 font-emphasis text-center">
             <time itemprop="startDate" content="2022-06-03">JUNE 3 - 5, 2022</time>
           </span>
-
         </div>
-        <span class="block text-title-primary-color text-center hidden md:block font-emphasis" itemprop="location">
+        <span class="text-title-primary-color text-center block font-emphasis" itemprop="location">
           <span class="text-gray-300">SEATTLE,</span> WA
         </span>
       </div>
     </section>
 
     <!-- NEWSLETTER BLOCK -->
-    <section class="sm:col-span-3 content-container">
+    <section class="w-full col-span-6 sm:col-span-3 content-container">
       <div class="flex flex-col items-center h-full justify-center font-emphasis font-medium">
         <span class="block text-title-primary-color mb-2 tracking-wide text-2xl md:text-3xl">
           NEWSLETTER
@@ -96,13 +93,13 @@ const postColumns = (index) => {
     </section>
 
     <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
-      <div class="w-1/3 flex-none pr-6 flex mb-3 md:mb-0 md:flex-col">
+      <div class="md:w-1/3 flex-none md:pr-6 flex mb-3 md:mb-0 flex-col">
         <Image
           src="https://ik.imagekit.io/thegoldendino/hfw/posts/volunteer_eH1tKog7f.jpg?updatedAt=1640916421073"
-          alt="Giving Tuesday + HONK! Fest West"
+          alt="Volunteer!"
           width="640"
           height="349"
-          className="w-full h-auto"
+          className="h-auto max-h-60 w-auto mx-auto"
         />
       </div>
       <div>
@@ -117,27 +114,27 @@ const postColumns = (index) => {
     </article>
 
     <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
-      <div class="w-1/4 flex-none pr-6 flex mb-3 md:mb-0 md:flex-col">
+      <div class="md:w-1/4 flex-none pr-6 flex mb-3 md:mb-0 md:flex-col">
         <Image 
           src="https://ik.imagekit.io/thegoldendino/hfw/carousel/2021/honkfestwest_2021_th-52_ieqmszPrw.jpg?updatedAt=1636925468749"
           alt="Neon Brass Party - H!FW - 2021"
           width="273"
           height="182"
-				  className="w-full h-auto mb-0 mr-2 md:mb-2 md:mr-0"
+				  className="w-1/3 md:w-full mb-0 mr-2 md:mb-2 md:mr-0"
         />
         <Image 
           src="https://ik.imagekit.io/thegoldendino/hfw/carousel/2021/honkfestwest_2021_th-72_ptDY6mK_M.jpg?updatedAt=1636925469114"
           alt="Kouyaté Arts - H!FW - 2021"
           width="273"
           height="182"
-				  className="w-full h-auto mb-0 mr-2 md:mb-2 md:mr-0"
+				  className="w-1/3 md:w-full h-auto mb-0 mr-2 md:mb-2 md:mr-0"
         /> 
         <Image 
           src="https://ik.imagekit.io/thegoldendino/hfw/carousel/2021/honkfestwest_2021_th-15_fgEAIXS2pi.jpg?updatedAt=1636925468773"
           alt="Filthy Fem Corps - H!FW - 2021"
           width="273"
           height="182"
-				  className="w-full h-auto"
+				  className="w-1/3 md:w-full h-auto"
         /> 
       </div>
       <div>
@@ -151,17 +148,17 @@ const postColumns = (index) => {
         <br/>
         <p>
           Want to see what our photographer, Tobin Holliday, captured for the day?
-          <a class="block" href="http://www.tobinholliday.com/honkfest-west">http://www.tobinholliday.com/honkfest-west</a>
+          <a class="block break-all" href="http://www.tobinholliday.com/honkfest-west">http://www.tobinholliday.com/honkfest-west</a>
         </p>
         <br/>
         <p>
           What about the enthusiastically dapper photographer, Espresso Buzz? 
-          <a class="block" href="https://www.espressobuzz.net/Events/2021/09-18-Honk/">https://www.espressobuzz.net/Events/2021/09-18-Honk/</a>
+          <a class="block break-all" href="https://www.espressobuzz.net/Events/2021/09-18-Honk/">https://www.espressobuzz.net/Events/2021/09-18-Honk/</a>
         </p>
         <br/>
         <p>
           And, as always, our very own Charlie Daniels has his immersive videos on YouTube for your viewing pleasure: 
-          <a class="block" href="https://www.youtube.com/playlist?list=PLL7ppauF4ZjoMkECEbEGaEUJqnUm36ovn">https://www.youtube.com/playlist?list=PLL7ppauF4ZjoMkECEbEGaEUJqnUm36ovn</a>
+          <a class="block break-all" href="https://www.youtube.com/playlist?list=PLL7ppauF4ZjoMkECEbEGaEUJqnUm36ovn">https://www.youtube.com/playlist?list=PLL7ppauF4ZjoMkECEbEGaEUJqnUm36ovn</a>
         </p>
       </div>
     </article>
@@ -174,13 +171,13 @@ const postColumns = (index) => {
     ))}
 
     <!-- LINK BLURBS -->
-    <section class="sm:col-span-6 md:col-span-2 content-container">
+    <section class="col-span-6 md:col-span-2 content-container">
       <LinkBlurb title="About" href="/about">
         HONK! Fest West is an accessible community music festival 
         driven by the energetic performances of street bands in public spaces.
       </LinkBlurb>
     </section>
-    <section class="sm:col-span-6 md:col-span-2 content-container">
+    <section class="col-span-6 md:col-span-2 content-container">
       <LinkBlurb title="Volunteer" href="/volunteer">
         If you want to volunteer, and help make HONK! Fest West magic, please 
         <a class="text-accent-color font-bold" href={volunteer_data.form_url}>
@@ -189,7 +186,7 @@ const postColumns = (index) => {
         and Thank You!!
       </LinkBlurb>
     </section>
-    <section class="sm:col-span-6 md:col-span-2 content-container">
+    <section class="col-span-6 md:col-span-2 content-container">
       <LinkBlurb title="Donate" href="/donate">
         Your contributions help make this event possible. 
         Through the generous efforts of our shared community, 
@@ -198,12 +195,12 @@ const postColumns = (index) => {
     </section>
 
     <!-- SLIDESHOW -->
-    <div class="sm:col-span-6 content-container">
+    <div class="col-span-6 content-container">
       <Slideshow slides={slides} client:visible  />
     </div>
 
     <!-- SUPPORT DUAMISH  -->
-    <div class="sm:col-span-6 content-container">
+    <div class="col-span-6 content-container">
       <p class="content font-base text-gray-700 italic">
         H!FW acknowledges that we are on the traditional land of the first people of Seattle
         — the Duwamish People past and present — and honor with gratitude the land itself,
