Donate | remove unneeded margin

--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -21,7 +21,7 @@ import sponsors from '@data/sponsors.json'
 							class="w-6 mr-2">
 						<span class="block text-lg content">Donate with Venmo</span>
 					</a>
-					<a href="https://www.paypal.com/donate/?hosted_button_id=EE2WLALDX9GCA" class="flex items-center mb-5 py-3 px-5 rounded-full bg-main-color-200">
+					<a href="https://www.paypal.com/donate/?hosted_button_id=EE2WLALDX9GCA" class="flex items-center py-3 px-5 rounded-full bg-main-color-200">
 						<i class="paypal mr-2"></i> <span class="block text-lg content">Donate with PayPal</span>
 					</a>
 				</div>
