Donate | Bolden tax id

--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -34,7 +34,7 @@ import sponsors from '@data/sponsors.json'
 					<Markdown>
 						Your contributions help make this event possible. Through the generous efforts of our shared community, we’ll keep bringing music to the streets and parks of Seattle’s neighborhoods.
 						<br/><br/>
-						HONK! Festival West is a 501(c)(3) nonprofit organization. Tax ID #86-3761255. Donations to HONK! Fest West are tax-deductible to the extent allowed by law. Donations can be made via check to:
+						HONK! Festival West is a 501(c)(3) nonprofit organization. <span class="font-bold">Tax ID #86-3761255</span>. Donations to HONK! Fest West are tax-deductible to the extent allowed by law. Donations can be made via check to:
 						<br/>
 						<span class="flex flex-col block my-4 sm:my-5 font-bold">
 							HONK! Festival West
