Portal | Create Portal for committee

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,8 @@ const activeLink = (link) => {
 }
 ---
 
+<a class="absolute right-5 top-0 text-white opacity-10" href="/portal">+</a>
+
 <!-- H!FW LOGO -->
 <div class="flex justify-center mt-6 sm:mt-12 mb-4 sm:mb-8 w-full">
 	<a class="block mx-auto w-4/5 sm:w-2/3 lg:w-2/5" href="/">
