Portal | Add committee hours log form

--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -42,6 +42,15 @@ import FestivalCountDown from '../components/FestivalCountDown.svelte';
 								</div>
 							</div>
 						</section>
+						<section>
+							<div class="rounded-lg bg-white overflow-hidden shadow">
+								<div class="p-6 lg:px-0 lg:py-6">
+									<iframe class="hidden md:block" src="https://docs.google.com/forms/d/e/1FAIpQLScNKpVnx8nGBraZ0cIVCYNhr0fab5H5Ux9le811WjdlZ2q1rg/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+									<h2 class="text-base font-medium text-gray-900 block md:hidden" id="calendar-title">Log Your Hours</h2>
+									<a class="block md:hidden mt-3 font-semibold text-blue-500 hover:text-blue-600" href="https://forms.gle/kpzfuyKpsTD8Tx6p8">https://forms.gle/kpzfuyKpsTD8Tx6p8</a>
+								</div>
+							</div>						
+						</section>
 					</div>
 					<div class="grid grid-cols-1 gap-4">
 						<section>
