Volunteer | Committee position form

--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -39,6 +39,11 @@ const positions = volunteer_data.positions
 					<p>
 						<Markdown content={positions[position].description}/>
 					</p>
+					<a 
+						href={`/volunteer/committee-form?position=${position}`}
+						class="block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-fit text-lg bg-opacity-80 px-2 hover:bg-opacity-90">
+						» APPLY
+					</a>
 				</div>
 			))}
 		</div>
