--- a/src/pages/volunteer/committee-form.astro
+++ b/src/pages/volunteer/committee-form.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
-import CommitteeForm from '@components/forms/CommitteeForm.svelte';
+import CommitteeForm from '../../components/forms/CommitteeForm.svelte';
 import volunteer_data from '@data/volunteer.json';
 ---
 
