Volunteer | Update Committee Position form name

--- a/src/pages/volunteer/committee-form.astro
+++ b/src/pages/volunteer/committee-form.astro
@@ -13,7 +13,7 @@ import volunteer_data from '@data/volunteer.json';
 
 <BaseLayout title="Volunteer Committee Form">
 	<div class="content-container">
-		<form name="committee-position" action="/volunteer/committee-form-success" method="POST" data-netlify="true" >
+		<form name="Committee Position" action="/volunteer/committee-form-success" method="POST" data-netlify="true" >
 			<input type="hidden" name="position" id="position" value="" />
 			<h2 class="text-gray-100 text-3xl mb-5">Position of Interest: <span class="underline" id="position-title"></span></h2>
 			<div class="space-y-8 divide-y divide-gray-200">
