--- a/src/pages/volunteer/committee-form.astro
+++ b/src/pages/volunteer/committee-form.astro
@@ -13,9 +13,12 @@ import volunteer_data from '@data/volunteer.json';
 
 <BaseLayout title="Volunteer Committee Form">
 	<div class="content-container">
-		<form name="Committee Position" action="/volunteer/committee-form-success" method="POST" data-netlify="true" >
+		<form name="Committee Position" action="/volunteer/committee-form-success" method="POST" netlify-honeypot="firsthumanwinkwinkname" data-netlify="true" >
 			<input type="hidden" name="position" id="position" value="" />
 			<h2 class="text-gray-100 text-3xl mb-5">Position of Interest: <span class="underline" id="position-title"></span></h2>
+			<label class="hidden">
+				First Name <input name="firsthumanwinkwinkname" type="text" />
+			</label>
 			<div class="space-y-8 divide-y divide-gray-200">
 				<div class="grid grid-cols-1 lg:grid-cols-2 gap-10">
 					<section class="grid grid-cols-1 gap-3">
