--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -12,14 +12,14 @@ const positions = volunteer_data.positions
 	<div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
 		<div class="w-full md:w-1/3">
 			<div class="content-container">
-				<Title title="Sign Up" center={true} />
+				<Title title="Volunteer Sign Up" center={true} />
 				<p class="content">
-					Help us produce an amazing HONK! Fest West 2022 Festival!
+					We need all the help we can get. Please sign up below and join an amazing group of people that help run HONK! Fest West every year.
 				</p>
 				<a 
-					href={volunteer_data.form_url}
+					href="/volunteer/new-volunteer-form"
 					class="block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90">
-					» APPLY HERE
+					» SIGN UP HERE
 				</a>
 			</div>
 		</div>
@@ -28,7 +28,7 @@ const positions = volunteer_data.positions
 				<Title title="HONK! Fest West" subtitle="NEEDS YOU!!!"/>
 				<div class="content">
 					<Markdown>
-						Below is a list of currently open roles within the Organizing Committee. There are positions of varying commitment to suit every level!
+						Below is a list of currently open roles in the HONK! Fest West Organization. There are positions of varying commitment to suit every level.
 					</Markdown>
 				</div>
 			</div>
