Volunteer | Housing form

--- a/src/pages/volunteer/committee-form.astro
+++ b/src/pages/volunteer/committee-form.astro
@@ -14,7 +14,7 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 	<div class="content-container">
 		<form name="Committee Position" action="/volunteer/committee-form-success" method="POST" netlify-honeypot="firsthumanwinkwinkname" data-netlify="true" >
 			<input type="hidden" name="position" id="position" value="" />
-			<h2 class="text-gray-100 text-3xl mb-5">Position of Interest: <span class="underline text-accent-color" id="position-title"></span></h2>
+			<h2 class="text-gray-100 text-3xl mb-5"><span class="underline text-accent-color" id="position-title"></span></h2>
 			<label class="hidden">
 				First Name <input name="firsthumanwinkwinkname" type="text" />
 			</label>
