--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -10,14 +10,25 @@ const positions = volunteer_data.positions
 
 <BaseLayout title="Volunteer">
 	<div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
-		<div class="w-full md:w-1/3">
+		<div class="w-full md:w-1/3 grid grid-cols-1 gap-6 h-fit">
 			<div class="content-container">
-				<Title title="Volunteer Sign Up" center={true} />
+				<Title title="Event Volunteer" center={true} />
 				<p class="content">
 					We need all the help we can get. Please sign up below and join an amazing group of people that help run HONK! Fest West every year.
 				</p>
 				<a 
 					href="/volunteer/new-volunteer-form"
+					class="block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90">
+					» SIGN UP HERE
+				</a>
+			</div>
+			<div class="content-container">
+				<Title title="Provide Housing" center={true} />
+				<p class="content">
+					Sign up to provide housing for HONK! Fest West out-of-town bands.
+				</p>
+				<a 
+					href="/volunteer/housing-form"
 					class="block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90">
 					» SIGN UP HERE
 				</a>
