Volunteer | Fix volunteer links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,7 +107,7 @@ const postColumns = (index) => {
         <p>
           The Volunteer Coordinator is our chief cat wrangler and fun instigator, and the source of sunshine for all our eager volunteers. Responsible for the recruitment, retention, rostering and wrangling of both year-round and event-based volunteers, the VC is the most vital link in the entire festival’s chain of awesomeness.
         </p>
-        <a class="block font-base rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90" href={volunteer_data.form_url} >
+        <a class="block font-base rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90" href="/volunteer/committee-form?position=Volunteer%20Coordinator" >
 			    » Apply Here
 		    </a>
       </div>
@@ -180,7 +180,7 @@ const postColumns = (index) => {
     <section class="col-span-6 md:col-span-2 content-container">
       <LinkBlurb title="Volunteer" href="/volunteer">
         If you want to volunteer, and help make HONK! Fest West magic, please 
-        <a class="text-accent-color font-bold" href={volunteer_data.form_url}>
+        <a class="text-accent-color font-bold" href="/volunteer">
           APPLY HERE
         </a>
         and Thank You!!
