Portal | Add Main Documents

--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -80,6 +80,21 @@ import FestivalCountDown from '../components/FestivalCountDown.svelte';
 						<section>
 							<div class="rounded-lg bg-white overflow-hidden shadow">
 								<div class="p-6">
+									<h2 class="text-base font-medium text-gray-900" id="slack-title">Main Documents</h2>
+									<ul class="mt-2 divide-y divide-gray-200">
+										<li class="py-3">
+											<a class="font-semibold text-blue-500 hover:text-blue-600" href="https://docs.google.com/presentation/d/1tQGNzsrtN5ZFZs0JT_3Y5U5V4lKf50KJN7TB6mYzrDY/edit?usp=sharing">Board Structure</a>
+										</li>
+										<li class="py-3">
+											<a class="font-semibold text-blue-500 hover:text-blue-600" href="https://drive.google.com/drive/folders/11Ed7acQcY0JPlLm3WO5uacBNNR9Rsf4D?usp=sharing">How To Do Stuff</a>
+										</li>	
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<div class="rounded-lg bg-white overflow-hidden shadow">
+								<div class="p-6">
 									<h2 class="text-base font-medium text-gray-900" id="slack-title">Google Drive</h2>
 									<ul class="mt-2 divide-y divide-gray-200">
 										<li class="py-3">
