Volunteer | Link to the Volunteer System

--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -17,7 +17,7 @@ const positions = volunteer_data.positions
 					We need all the help we can get. Please sign up below and join an amazing group of people that help run HONK! Fest West every year.
 				</p>
 				<a 
-					href="/volunteer/new-volunteer-form"
+					href="https://volunteer-hfw.netlify.app/auth/sign-up"
 					class="block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90">
 					» SIGN UP HERE
 				</a>
