Update 'To be updated in January' to the settled dates (6/3-6/5) within the main landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -143,7 +143,7 @@ const postColumns = (index) => {
         </p>
         <br/>
         <p>
-          Mark your calendars for the first weekend of June, when we return for HONK! Fest West 2022! Locations to be announced in January!!! We are looking forward to HONK'ing again with you in 2022! 
+          Mark your calendars for June 3-5, when we return for HONK! Fest West 2022! We will be kicking off the event in Georgetown on Friday night at 6pm, June 3rd, heading on to Columbia City on Saturday (June 4th, where rumor has it, there will be a parade!) and then on Sunday, June 5th, we will complete the HONK! weekend at Yesler Terrace Park in central Seattle.
         </p>
         <br/>
         <p>
